test/Fail/Issue4461.err
Issue4461.agda:4.3-4: error: [ConstructorDoesNotFitInData]
Constructor m
of inferred sort univSort _4
does not fit into data type of sort Set.
(Reason: The terms
           Agda.Primitive.lzero
         and
           Agda.Primitive.lsuc _7
         are not equal at type Agda.Primitive.Level)
when checking that the type _4 of an argument to the constructor m
fits in the sort Set of the datatype.
